# scanner-v3

./: .coverage  .env.example  .gitignore  LICENSE  README.md  final_test_report.md  mypy.ini  pyproject.toml  pyproject.toml.backup  pyproject.toml.backup2  pytest.ini  ruff.toml  setup.py  test.context  test.md  test_scanner.py
.github/workflows/: ci.yml
config/: exclude.conf
docs/: README.md
docs/roadmap/: README_ROADMAP_MVP_V1.0.md
docs/todo/: DATABASE_TABLES.txt
src/: __version__.py  cli.py  cli.py.backup  cli_report.py
src/analyzers/: api.py  api.py.backup_up035  database.py  database.py.backup_up035  dependencies.py  docker.py  docker.py.backup_up035  env.py  errors.py  errors.py.backup_up035  functions.py  functions.py.backup_up035  git.py  git.py.backup_up035  manifest.py  manifest.py.backup_up035  security.py  security.py.backup_up035  todos.py  webhooks.py
src/api/: main.py
src/core/: base.py  cache.py  cache.py.backup_up035  config.py  config.py.backup  config.py.backup_up035  constants.py  container.py  container.py.backup_up035  file_reader.py  logger.py  models.py  models.py.backup_up035  scanner.py  secrets.py  validators.py  validators.py.backup_up035
src/output/: __init__.py  base.py  base.py.backup_up035  context.py  context.py.backup_up035  json.py  json.py.backup_up035  markdown.py  markdown.py.backup_up035
tests/: conftest.py  test_snapshot.py
tests/analyzers/: test_api.py  test_manifest.py  test_todos.py
tests/core/: test_scanner.py
tests/output/: test_formatters.py
