[tool.poetry]
name = "scanner-v3"
version = "3.0.0"
description = "Modern project analyzer for LLM context"
authors = ["EternalMax Team"]
python = "^3.8"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
rich = "^13.0"
pydantic = "^2.0"
aiofiles = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
